--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site
-repository: PriyankaBulla/PriyankaBulla.github.io
+repository: yashagrawal5/yashagrawal5.github.io
 #favicon: images/favicon.ico
 
 # Personal info
-name: Priyanka Bulla
+name: Yash agrawal
 title: MS in Information Technology and Management (Data Analytics and Management)
 email: pbulla@hawk.iit.edu
 phone: 312-868-8747
@@ -11,12 +11,12 @@ phone: 312-868-8747
 
 # Social links
 #twitter_username: facespics
-github_username:  PriyankaBulla
+github_username: yashagrawal5 
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: chillwildlife
-linkedin_username: priyanka0507
+linkedin_username: yashagrawal05
 # pinterest_username: jekyll
 #youtube_username: globalmtb
 # googleplus_username: +jekyll
@@ -25,7 +25,7 @@ linkedin_username: priyanka0507
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, I am Priyanka Bulla.
+  Hi, I am Yash Agrawal
   
   I am a graduate student with study emphasis on Information Technology and Management and a data evangelist with a keen sense for data, its modeling and mining, pattern recognition, and trend analysis to discover valuable insights and visually represent them. I am knowledgeable in forecasting, pattern and trend identification and data insights. Highly skilled in public speaking, data analysis, and database design. Experienced in data visualization, customer segmentation, and analytics. Adept in classroom instruction and collaboration with students and faculty to create sustainable solutions in the information technology field.  
   
