--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ repository: yashagrawal5/yashagrawal5.github.io
 # Personal info
 name: Yash agrawal
 title: MS in Information Technology and Management (Data Analytics and Management)
-email: pbulla@hawk.iit.edu
-phone: 312-868-8747
+email: yagrawal1@hawk.iit.edu
+phone: 312-684-6967
 #website: www.github.com/sproogen/resume-theme
 
 # Social links
@@ -16,7 +16,7 @@ github_username: yashagrawal5
 # facebook_username: jekyll
 # flickr_username: jekyll
 #instagram_username: chillwildlife
-linkedin_username: yashagrawal05
+linkedin_username: yash-agrawal5
 # pinterest_username: jekyll
 #youtube_username: globalmtb
 # googleplus_username: +jekyll
@@ -29,7 +29,7 @@ about_content: | # this will include new lines to allow paragraphs
   
   I am a graduate student with study emphasis on Information Technology and Management and a data evangelist with a keen sense for data, its modeling and mining, pattern recognition, and trend analysis to discover valuable insights and visually represent them. I am knowledgeable in forecasting, pattern and trend identification and data insights. Highly skilled in public speaking, data analysis, and database design. Experienced in data visualization, customer segmentation, and analytics. Adept in classroom instruction and collaboration with students and faculty to create sustainable solutions in the information technology field.  
   
-  I will be graduating from the Illinois Institute of Technology in May 2020 with a master’s degree in Information Technology and Management with Data Management as my major. I am currently seeking a new opportunity to use my knowledge and skills to help companies forecast trends, patterns, and behaviors to make metric and prediction-based decisions to improve accuracy, success rate, sales volume, or reduce cost and risk of the outcome. 
+  I will be graduating from the Illinois Institute of Technology in May 2021 with a master’s degree in Information Technology and Management with Data Management as my major. I am currently seeking a new opportunity to use my knowledge and skills to help companies forecast trends, patterns, and behaviors to make metric and prediction-based decisions to improve accuracy, success rate, sales volume, or reduce cost and risk of the outcome. 
 
   Scroll down to learn more about me!
 
@@ -46,9 +46,9 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-   - **Data** **Management**: Database Design and Management, Data Analysis, Pattern and Trend Identification, Visualization and Data Insights, Data Warehousing, Data Mining, Regression Analysis, Data Modeling, Predictive Analytics
+   - **Programming** **Skills**: Database Design and Management, Data Analysis, Pattern and Trend Identification, Visualization and Data Insights, Data Warehousing, Data Mining, Regression Analysis, Data Modeling, Predictive Analytics
    - **Programming** **Languages**: C,C++,Java, SQL
-   - **Web Technology**: HTML5, CSS, JavaScript
+   - **Big Data Technology**: Hadoop, Hive, Pig, Neural Network processing , Jupyter Notebook
    - **Data Visualization**: Excel, Tableau, PowerBI, Pentaho CDE
    - **BI and Reporting tools**: MS Power BI, Tableau, Excel VBA, VLOOKUP
    - **Data Analytics**: Excel, R, SQL, Python, Saiku Analytics
