--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
   #github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
   quote: >
     
-   - Binary Classification Problem to predict and forecast incident happening or not at CTA locations using Various Significant Attributes.
+    Binary Classification Problem to predict and forecast incident happening or not at CTA locations using Various Significant Attributes.
     
   description: | # this will include new lines to allow paragraphs
       
@@ -23,7 +23,7 @@
   #github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
   quote: >
     
-     - Implemented Fault Prediction Model to Forecast happening of network fault and what type of fault was that.
+      Implemented Fault Prediction Model to Forecast happening of network fault and what type of fault was that.
   description: | # this will include new lines to allow paragraphs
       
       **Contributions:**
@@ -39,7 +39,7 @@
   #github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
   quote: >
       
-     - Data Warehousing (DW) is a process for collecting and managing data from varied sources to provide meaningful business insights. Data Warehouse plays an important role. It helps to analyze key aspects to improve sales of an enterprise.
+      Data Warehousing (DW) is a process for collecting and managing data from varied sources to provide meaningful business insights. Data Warehouse plays an important role. It helps to analyze key aspects to improve sales of an enterprise.
     
   description: | # this will include new lines to allow paragraphs
       
@@ -55,7 +55,7 @@
   #github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
   quote: >
     
-   - This is Bike sharing prediction for forecasting the Sharing business of bike over the USA.
+   This is Bike sharing prediction for forecasting the Sharing business of bike over the USA.
     
   description: | # this will include new lines to allow paragraphs
       
@@ -74,8 +74,8 @@
   quote: >
     
      
-    - Have you ever used a credit card at a store only to be declined? Or have the payments been blocked because you were charged a higher amount. 
-    - Credit Card Fraud is a wide-ranging term for theft and fraud committed using a credit Card or any similar payment mechanism as a fraudulent source of funds in a transaction
+    Have you ever used a credit card at a store only to be declined? Or have the payments been blocked because you were charged a higher amount. 
+    Credit Card Fraud is a wide-ranging term for theft and fraud committed using a credit Card or any similar payment mechanism as a fraudulent source of funds in a transaction
 
   description: | # this will include new lines to allow paragraphs
       
