--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -69,5 +69,24 @@
       - Identified significance variable by Weight of Evidence(WOE) and IV analysis, to solve imbalance issue where 0.17% are fraudulent.
       - Evaluated & developed data model by machine learning algorithms a Logistic Regression, Decision Trees and Random Forest to predict Fraudulent Transactions and validated the models using confusion matrix and F1 score.
 
+- layout: top-middle
+  name: Bike Sharing Prediction Model  | Sep 2019
+  #link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+  #github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
+  quote: >
+    
+   This is Bike sharing prediction for forecasting the Sharing business of bike over the USA.
+    
+  description: | # this will include new lines to allow paragraphs
+      
+      **Contributions:**
+       
+       - Applied Data processing of data and feature Engineering forgetting insights, Implemented Residual Analysis on developed models
+       - Developed Linear Models on different parameters metrics AIC/BIC , Applied ANOVA on the relational Databases.
+       - Trained model with methods such as Random Forest , Support Vector Machine(SVM) algorithm got accuracy of 87% on test data.
+       - Performed hypothesis test on the data set, built a regression model and performed predictive analysis using R.
+       - Also used predict() function to predict the variables that affected the most and RMSE (Root mean square error) to check the accuracy of the prediction.
+       
+
        
        
