--- a/_config.yml
+++ b/_config.yml
@@ -61,9 +61,10 @@ more_content: | # this will include new lines to allow paragraphs
 # others_title: Achievements & Accomplishments
 others_content: | # this will include new lines to allow paragraphs
    - Recipient of “Tech Edge Scholarship”, Illinois Institute of Technology, Chicago
-   - Edx HarvardX Data Science: R Basics Certification
-   - Interests: Reading Books, Collecting Stamps
-   - Volunteer: work as a Community Desk Assistant at IIT dorms.
+   - Held Workshop and gave seminar  on   “Training on Python –Beginners to expertise” to 800 members of different technical field in campus of Tata Communications Pvt Ltd, Pune in 2018
+   - Secured 1st position in “Model Presentation using predictive analysis implementing python” organized by TATA Consultancy Services held at Oriental College Bhopal in 2015
+   - Secured 1st position in Google Webpage Design held at IIT Indore in 2015
+   - Got 3rd rank in “Line Follower Robotic Competition” at IIT Indore in 2016 .On the spot award from Development Lead for additional effort in delivering the zero bug free code.  
              
 
 
