--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ about_content: | # this will include new lines to allow paragraphs
 # Education Section
 # educaton_title: Education
 
+# Certificate Section
+# certificate_title: Certificate
+
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
