--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Experience template
 - layout: left
-  company: DIGBY'S DETECTIVE AND SECURITY AGENCY
+  company: DIGBY'S DETECTIVE AND SECURITY 
   link: https://digbysecurity.com/
   job_title: Data Analyst Intern
   dates: May 2020-present
